--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+
     <title>Texify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
+
   <body>
     <div id="root"></div>
   </body>
